--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -1,4 +1,11 @@
 @import url("theme.css");
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,300,400,700);
+
+body {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 300;
+}
 
 table {
   border-spacing: 2px;
