Hide some parts of the sidebar

--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -239,3 +239,11 @@ pre {
 .wy-breadcrumbs-aside {
   display: none !important;
 }
+
+.wy-side-nav-search div.version {
+  display: none !important;
+}
+
+.wy-body-for-nav div.rst-versions {
+  display: none !important;
+}
