bring back the bonny menu

--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -240,10 +240,11 @@ pre {
   display: none !important;
 }
 
+/*
 .wy-side-nav-search div.version {
   display: none !important;
 }
-
+*/
 .wy-body-for-nav div.rst-versions {
   display: none !important;
 }
