--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -176,6 +176,7 @@ pre {
   margin-bottom: 0px !important;
   padding-top: 0px !important;
   padding-bottom: 0px !important;
+  color: #333;
 }
 
 /* nav menu side bar */
