try to hide invoca text from top left on mouseover

--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -176,7 +176,11 @@ pre {
   margin-bottom: 0px !important;
   padding-top: 0px !important;
   padding-bottom: 0px !important;
-  color: #333;
+  //color: #333;
+  color: inherit;
+}
+
+.wy-side-nav-search a:hover {
 }
 
 /* nav menu side bar */
