--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -176,11 +176,11 @@ pre {
   margin-bottom: 0px !important;
   padding-top: 0px !important;
   padding-bottom: 0px !important;
-  //color: #333;
-  color: inherit;
+  color: #333;
 }
 
 .wy-side-nav-search a:hover {
+  color: #333;
 }
 
 /* nav menu side bar */
