--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -176,7 +176,7 @@ pre {
   margin-bottom: 0px !important;
   padding-top: 0px !important;
   padding-bottom: 0px !important;
-  color: #333;
+  color: rgba(0, 0, 0, 0);
 }
 
 .wy-side-nav-search a:hover {
