--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -203,8 +203,26 @@ pre {
   color: rgb(132, 188, 13);
 }
 
+/* make nav links green */
 .wy-menu-vertical li.current > a {
   color: rgb(132, 188, 13);
+  background-color: rgb(48, 48, 48);
+}
+
+.wy-menu-vertical li.current {
+  background: #333 none repeat scroll 0 0;
+}
+
+.wy-menu-vertical li.current a {
+  border: 0px;
+}
+
+.wy-menu.wy-menu-vertical a {
+  background-color: #333;
+}
+
+a.reference.internal {
+  background-color: #333 !important;
 }
 
 /*********************RIGHT HAND CONTENT************************/
