--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -108,6 +108,16 @@ tr:nth-child(odd) {
   background-color: #FFF;
 }
 
+.multiline-table tr:nth-child(0) {
+  color: #636060;
+  background-color: #efefef;
+}
+
+.multiline-table tr:nth-child(n + 1) {
+  color: #4A4A4A;
+  background-color: #FFF;
+}
+
 code.docutils {
   background: #3F3F3F;
   border: none;
